<resources>
    <string name="title_activity_login">Title Activity</string>
    <string name="app_name">CovidNet</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="UID">Adhaar UID</string>
    <string name="Mobile">Mobile Number</string>
    <string name="City">Enter Your City</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="lLogin">Login</string>
    <string name="Change">Change Language</string>
    <string name="lEmail">Email</string>
    <string name="lPassword">Password</string>
    <string name="Map">Map</string>
    <string name="Notify">Notify</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

   <string name="title_activity_mobile__verification">Mobile_Verification</string>
    <!--  < Strings used for fragments for navigation-->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>

     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_map__distance">Map_Distance</string>
</resources>