<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aa"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.test.MainActivity">

    <EditText
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:inputType="text" />
    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:inputType="text" />
    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="text" />
    <EditText
        android:id="@+id/UID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/UID"
        android:inputType="text" />

    <EditText
        android:id="@+id/Mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Mobile"
        android:inputType="text" />
    <EditText
        android:id="@+id/City"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/City"

        android:inputType="text" />
    <Button
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Register"

        android:text="@string/Register" />
    <Button
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Login"

        android:text="@string/Login" />
    <Button
        android:id="@+id/Language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:text="@string/Change" />
</LinearLayout>